--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,26 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@layer base{
+    @font-face{
+        font-family: "Lora";
+        src: url("/fonts/Lora.woff") fomrat("woff2");
+        font-weight: 500;
+        font-display: swap;
+        font-size: 40px;
+        line-height: 55px;
+        font-style: normal;
+    },
+    @font-face {
+        font-family: "Inter";
+        src: url("/fonts/Inter-Loght.woff") fomrat("woff2");
+        font-weight: 400;
+        font-display: swap;
+        font-style: normal
+    },
+    input, button {
+        @apply focus:outline-none;
+    }
 }
